# QCROP

./: .gitignore  README.md  pyproject.toml
configs/: baseline_125m.yaml  m2_frozen_gate.yaml  m3_joint_soft.yaml
eval/: benchmark.py  needle.py  ppl.py
model/: __init__.py  gate.py  nano_gpt.py  qcrop_block.py  summary.py
tests/: smoke.py
train/: loop.py  schedules.py
